Re-upload attachments to make sure they are always valid
Fixes #17